Fixed #351 - JDK17+ Usage in Tests